--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 !var/log/.gitkeep
 
 # Parameters
-/app/config/parameters.yml
+/app/config/parameters.yml/
 /app/config/parameters.ini
 
 # Managed by Composer
