--- a/src/Cosanit/CosanitBundle/Resources/config/routing.yml
+++ b/src/Cosanit/CosanitBundle/Resources/config/routing.yml
@@ -6,12 +6,12 @@ cosanit_homepage:
     methods:  [GET, POST]
 
 cosanit_devis:
-    path:     /devis-prix-création-site-web-2023
+    path:     /devis-prix-création-site-web
     defaults: { _controller: CosanitBundle:Default:devis }
     methods:  [GET, POST]
 
 cosanit_devisid:
-    path:     /devis-prix-site-web-{id}-2023
+    path:     /devis-prix-site-web-{id}
     defaults: { _controller: CosanitBundle:Default:devisid }
     methods:  [GET, POST]
 
@@ -22,7 +22,7 @@ cosanit_produits:
 
 
 cosanit_produits_categorie:
-  path:     /création/{id}-2023
+  path:     /création/{id}
   defaults: { _controller: CosanitBundle:Default:produitscategorie }
   methods:  [GET, POST]
 
