--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -12,6 +12,8 @@ parameters:
 framework:
     #esi:             ~
     translator:      { fallbacks: ["%locale%"] }
+        paths:
+            - '%kernel.root_dir%/../translations'
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
