--- a/src/Cosanit/CosanitBundle/Resources/config/routing.yml
+++ b/src/Cosanit/CosanitBundle/Resources/config/routing.yml
@@ -2,10 +2,11 @@
 
 cosanit_homepage:
     path:     /
-    defaults: { _controller: CosanitBundle:Default:index }
+    defaults: { _controller: CosanitBundle:Default:index, _locale: fr }
     methods:  [GET, POST]
     requirements:
       _locale:  en|fr
+
 cosanit_devis:
     path:     /devis-prix-création-site-web
     defaults: { _controller: CosanitBundle:Default:devis }
