--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 cosanit:
     resource: "@CosanitBundle/Resources/config/routing.yml"
-    prefix:   /{_locale}
+    prefix:   /
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
