--- a/src/Cosanit/CosanitBundle/Resources/config/routing.yml
+++ b/src/Cosanit/CosanitBundle/Resources/config/routing.yml
@@ -1,7 +1,7 @@
 
 
 cosanit_homepage:
-    path:     /{_locale}
+    path:     /{_locale}/
     defaults: { _controller: CosanitBundle:Default:index, _locale: fr }
     methods:  [GET, POST]
     requirements:
