--- a/src/Cosanit/CosanitBundle/Resources/config/routing.yml
+++ b/src/Cosanit/CosanitBundle/Resources/config/routing.yml
@@ -1,8 +1,8 @@
 
 
 cosanit_homepage:
-    path:     /{_locale}/
-    defaults: { _controller: CosanitBundle:Default:index, _locale: en }
+    path:     /
+    defaults: { _controller: CosanitBundle:Default:index, _locale: fr }
     methods:  [GET, POST]
     requirements:
       _locale:  en|fr
