--- a/src/Cosanit/CosanitBundle/Resources/config/routing.yml
+++ b/src/Cosanit/CosanitBundle/Resources/config/routing.yml
@@ -5,7 +5,7 @@ cosanit_homepage:
     defaults: { _controller: CosanitBundle:Default:index}
     methods:  [GET, POST]
     requirements:
-      _locale:  en|fr
+      _locale:  en|fr|ar
     
             
 cosanit_devis:
